# work-package-service

./: .description.md  .mandatory_files  .pre-commit-config.yaml  .readme_template.md  .static_files  Dockerfile  Dockerfile.debian  README.md  config_schema.json  example_config.yaml  openapi.yaml  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.txt  setup.cfg
.devcontainer/: .dev_config.yaml  Dockerfile  dev_launcher  devcontainer.json  docker-compose.yml
.github/workflows/: check_config_docs.yaml  check_openapi_spec.yaml  check_readme.yaml  dev_cd.yaml
.pyproject_generation/: pyproject_custom.toml
.readme_generation/: design.md
lock/: requirements-dev.txt  requirements.txt
my_microservice/: __main__.py  config.py
my_microservice/api/: main.py
scripts/: update_config_docs.py  update_readme.py
scripts/script_utils/: fastapi_app_location.py
src/wps/: __init__.py  __main__.py  cli.py  config.py  constants.py  inject.py  main.py  prepare.py
src/wps/adapters/: __init__.py
src/wps/adapters/inbound/: __init__.py  event_sub.py
src/wps/adapters/inbound/fastapi_/: __init__.py  auth.py  configure.py  dummies.py  openapi.py  routes.py
src/wps/adapters/outbound/: __init__.py  dao.py  http.py
src/wps/core/: __init__.py  crypt.py  models.py  repository.py  tokens.py
src/wps/migrations/: __init__.py  definitions.py  entry.py
src/wps/ports/: __init__.py
src/wps/ports/inbound/: __init__.py  repository.py
src/wps/ports/outbound/: __init__.py  access.py  dao.py
tests/: conftest.py  test_access.py  test_api.py  test_crypt.py  test_events.py  test_migration.py  test_models.py  test_repository.py  test_tokens.py
tests/fixtures/: __init__.py  access.py  auth_keys.py  crypt.py  datasets.py
work_package_service/: __init__.py  __main__.py  config.py  models.py
work_package_service/api/: main.py
wps/: __init__.py  __main__.py  cli.py  config.py  container.py  main.py
wps/adapters/: __init__.py
wps/adapters/inbound/: event_sub.py
wps/adapters/inbound/fastapi_/: __init__.py  auth.py  custom_openapi.py  openapi.py  routes.py
wps/adapters/inbound/http/: openapi.py  routes.py
wps/adapters/outbound/: __init__.py  dao.py  http.py
wps/core/: __init__.py  crypt.py  models.py  repository.py  tokens.py
wps/ports/inbound/: repository.py
wps/ports/outbound/: __init__.py  access.py  dao.py  http.py
