[build-system]
requires = ["setuptools>=67.7.2"]
build-backend = "setuptools.build_meta"

[project]
name = "wps"
version = "1.0.0"
description = "Work Package Service"
readme = "README.md"
authors = [
    { name = "German Human Genome Phenome Archive (GHGA)", email = "contact@ghga.de" },
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 1 - Planning",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Software Development :: Libraries",
    "Intended Audience :: Developers",
]
dependencies = [
    "ghga-event-schemas~=3.0.0",
    "ghga-service-commons[api,auth,crypt]>=1.2.0",
    "hexkit[akafka,mongodb]>=1.1.0",
    "typer>=0.9.0",
]

[project.license]
text = "Apache 2.0"

[project.urls]
Repository = "https://github.com/ghga-de/work-package-service"

[project.scripts]
wps = "wps.__main__:cli"

[tool.setuptools.packages.find]
where = ["src"]
